[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/bigfly.png" type="Texture" id=1]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 67.0866, 97.0558 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 67.6968, 68.6217 )

[sub_resource type="CircleShape2D" id=3]
radius = 280.855

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 96.3757, 94.8972 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 96.3372, 95.8017 )
shape = SubResource( 2 )

[node name="player_detect" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect"]
position = Vector2( 92.8097, 91.9793 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_exited" from="player_detect" to="." method="_on_player_detect_area_exited"]
[connection signal="body_entered" from="player_detect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="player_detect" to="." method="_on_player_detect_body_exited"]
